--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,7 @@
 html {
   font-size: 62.5%; // 1 rem = 10px => 10px/16px = 62.5%
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   @include respond(tab-land) {
     // width < 1200
@@ -29,6 +30,7 @@ body {
   box-sizing: border-box;
   // padding: 3rem;
   overflow-x: hidden;
+
   @include respond(tab-port) {
     padding: 0;
   }
